Fix iPad layout bugs

--- a/src/components/css/VideoForm.module.css
+++ b/src/components/css/VideoForm.module.css
@@ -3,5 +3,10 @@
 	flex: 1;
 	flex-direction: column;
 	justify-content: center;
-	/*align-items: center;*/
+}
+
+.fail {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
